--- a/速递医疗 医生端/View/MinePocketCollectionViewCell.xib
+++ b/速递医疗 医生端/View/MinePocketCollectionViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="bzJ-H4-6vT" customClass="MinePocketCollectionViewCell" customModule="速递医疗_医生端" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="bzJ-H4-6vT" customClass="MinePocketCollectionViewCell" customModule="DoctorClient" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="280" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -91,12 +91,6 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="查看详情" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="caW-zY-A8g">
-                        <rect key="frame" x="111.5" y="165" width="57.5" height="17"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
             </view>
             <color key="backgroundColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
@@ -112,13 +106,11 @@
                 <constraint firstItem="Ct5-4T-MYy" firstAttribute="leading" secondItem="bzJ-H4-6vT" secondAttribute="leading" constant="20" id="7zB-CU-ryx"/>
                 <constraint firstItem="N4a-W5-K89" firstAttribute="top" secondItem="fNu-nD-H94" secondAttribute="bottom" constant="10" id="E9Z-AF-7JV"/>
                 <constraint firstItem="IRv-i8-KUD" firstAttribute="leading" secondItem="bzJ-H4-6vT" secondAttribute="leading" constant="10" id="GSs-sA-WG9"/>
-                <constraint firstItem="caW-zY-A8g" firstAttribute="centerX" secondItem="bzJ-H4-6vT" secondAttribute="centerX" id="H5K-bj-dYZ"/>
                 <constraint firstItem="D0R-e6-yrp" firstAttribute="top" secondItem="bzJ-H4-6vT" secondAttribute="top" constant="15" id="ID1-sR-d5Y"/>
                 <constraint firstItem="fNu-nD-H94" firstAttribute="leading" secondItem="bzJ-H4-6vT" secondAttribute="leading" constant="20" id="KNu-cK-vSP"/>
                 <constraint firstItem="z6n-gH-7fM" firstAttribute="top" secondItem="bzJ-H4-6vT" secondAttribute="top" constant="55" id="MVP-dA-odg"/>
                 <constraint firstItem="IRv-i8-KUD" firstAttribute="top" secondItem="D0R-e6-yrp" secondAttribute="bottom" constant="5" id="NTa-5y-fbQ"/>
                 <constraint firstItem="Ct5-4T-MYy" firstAttribute="top" secondItem="fCH-Sd-m3P" secondAttribute="bottom" constant="10" id="Olm-es-a8x"/>
-                <constraint firstItem="caW-zY-A8g" firstAttribute="top" secondItem="Ct5-4T-MYy" secondAttribute="bottom" constant="10" id="Pss-hf-UM3"/>
                 <constraint firstItem="Qxq-5l-30c" firstAttribute="top" secondItem="N4a-W5-K89" secondAttribute="bottom" constant="10" id="Woh-CO-I0L"/>
                 <constraint firstItem="a6i-jg-cS2" firstAttribute="leading" secondItem="z6n-gH-7fM" secondAttribute="trailing" constant="1" id="Wtw-RP-FLL"/>
                 <constraint firstItem="Qxq-5l-30c" firstAttribute="leading" secondItem="bzJ-H4-6vT" secondAttribute="leading" constant="20" id="g1X-hO-OrI"/>
